--- a/flask-app/values.yaml
+++ b/flask-app/values.yaml
@@ -80,10 +80,14 @@ livenessProbe:
   httpGet:
     path: /health
     port: 5000
+  initialDelaySeconds: 10
+  periodSeconds: 5
 readinessProbe:
   httpGet:
     path: /health
     port: 5000
+  initialDelaySeconds: 10
+  periodSeconds: 5
 
 autoscaling:
   enabled: false
